@@ -2428,7 +2428,8 @@ void CBaseView::ShowFormatPopup(CPoint point)
     }
     if ((cmd>=nEolCommandBase) && (cmd<nEolCommandBase+(int)_countof(eolArray)))
     {
-        SetLineEndings(eolArray[cmd-nEolCommandBase]);
+        ReplaceLineEndings(eolArray[cmd-nEolCommandBase]);
+        SaveUndoStep();
     }
     switch (cmd)
     {
@@ -5503,7 +5504,7 @@ EOL CBaseView::GetLineEndings()
     return m_lineendings;
 }
 
-void CBaseView::SetLineEndings(EOL eEol)
+void CBaseView::ReplaceLineEndings(EOL eEol)
 {
     if (eEol == EOL_AUTOLINE)
     {
@@ -5533,6 +5534,11 @@ void CBaseView::SetLineEndings(EOL eEol)
     SetModified();
 }
 
+void CBaseView::SetLineEndingStyle(EOL eEol)
+{
+    m_lineendings = eEol;
+}
+
 void CBaseView::SetTextType(CFileTextLines::UnicodeType eTextType)
 {
     if (m_texttype == eTextType)
@@ -5555,7 +5561,7 @@ void CBaseView::AskUserForNewLineEndingsAndTextType(int nTextId)
     if (dlg.DoModal() != IDOK)
         return;
     SetTextType(dlg.texttype);
-    SetLineEndings(dlg.lineendings);
+    ReplaceLineEndings(dlg.lineendings);
 }
 
 /**
