@@ -792,7 +792,7 @@ bool CMainFrame::LoadViews(int line)
 
             m_pwndLeftView->m_pViewData = &m_Data.m_YourBaseBoth;
             m_pwndLeftView->SetTextType(m_Data.m_arYourFile.GetUnicodeType());
-            m_pwndLeftView->SetLineEndings(m_Data.m_arYourFile.GetLineEndings());
+            m_pwndLeftView->SetLineEndingStyle(m_Data.m_arYourFile.GetLineEndings());
             m_pwndLeftView->m_sWindowName = m_Data.m_baseFile.GetWindowName() + _T(" - ") + m_Data.m_yourFile.GetWindowName();
             m_pwndLeftView->m_sFullFilePath = m_Data.m_baseFile.GetFilename() + _T(" - ") + m_Data.m_yourFile.GetFilename();
             m_pwndLeftView->m_pWorkingFile = &m_Data.m_yourFile;
@@ -819,7 +819,7 @@ bool CMainFrame::LoadViews(int line)
 
             m_pwndLeftView->m_pViewData = &m_Data.m_YourBaseLeft;
             m_pwndLeftView->SetTextType(m_Data.m_arBaseFile.GetUnicodeType());
-            m_pwndLeftView->SetLineEndings(m_Data.m_arBaseFile.GetLineEndings());
+            m_pwndLeftView->SetLineEndingStyle(m_Data.m_arBaseFile.GetLineEndings());
             m_pwndLeftView->m_sWindowName = m_Data.m_baseFile.GetWindowName();
             m_pwndLeftView->m_sFullFilePath = m_Data.m_baseFile.GetFilename();
             m_pwndLeftView->m_sConvertedFilePath = m_Data.m_baseFile.GetConvertedFileName();
@@ -828,7 +828,7 @@ bool CMainFrame::LoadViews(int line)
 
             m_pwndRightView->m_pViewData = &m_Data.m_YourBaseRight;
             m_pwndRightView->SetTextType(m_Data.m_arYourFile.GetUnicodeType());
-            m_pwndRightView->SetLineEndings(m_Data.m_arYourFile.GetLineEndings());
+            m_pwndRightView->SetLineEndingStyle(m_Data.m_arYourFile.GetLineEndings());
             m_pwndRightView->m_sWindowName = m_Data.m_yourFile.GetWindowName();
             m_pwndRightView->m_sFullFilePath = m_Data.m_yourFile.GetFilename();
             m_pwndRightView->m_sConvertedFilePath = m_Data.m_yourFile.GetConvertedFileName();
@@ -855,7 +855,7 @@ bool CMainFrame::LoadViews(int line)
 
         m_pwndLeftView->m_pViewData = &m_Data.m_TheirBaseBoth;
         m_pwndLeftView->SetTextType(m_Data.m_arTheirFile.GetUnicodeType());
-        m_pwndLeftView->SetLineEndings(m_Data.m_arTheirFile.GetLineEndings());
+        m_pwndLeftView->SetLineEndingStyle(m_Data.m_arTheirFile.GetLineEndings());
         m_pwndLeftView->m_sWindowName.LoadString(IDS_VIEWTITLE_THEIRS);
         m_pwndLeftView->m_sWindowName += _T(" - ") + m_Data.m_theirFile.GetWindowName();
         m_pwndLeftView->m_sFullFilePath = m_Data.m_theirFile.GetFilename();
@@ -864,7 +864,7 @@ bool CMainFrame::LoadViews(int line)
 
         m_pwndRightView->m_pViewData = &m_Data.m_YourBaseBoth;
         m_pwndRightView->SetTextType(m_Data.m_arYourFile.GetUnicodeType());
-        m_pwndRightView->SetLineEndings(m_Data.m_arYourFile.GetLineEndings());
+        m_pwndRightView->SetLineEndingStyle(m_Data.m_arYourFile.GetLineEndings());
         m_pwndRightView->m_sWindowName.LoadString(IDS_VIEWTITLE_MINE);
         m_pwndRightView->m_sWindowName += _T(" - ") + m_Data.m_yourFile.GetWindowName();
         m_pwndRightView->m_sFullFilePath = m_Data.m_yourFile.GetFilename();
@@ -873,7 +873,7 @@ bool CMainFrame::LoadViews(int line)
 
         m_pwndBottomView->m_pViewData = &m_Data.m_Diff3;
         m_pwndBottomView->SetTextType(m_Data.m_arTheirFile.GetUnicodeType());
-        m_pwndBottomView->SetLineEndings(m_Data.m_arTheirFile.GetLineEndings());
+        m_pwndBottomView->SetLineEndingStyle(m_Data.m_arTheirFile.GetLineEndings());
         m_pwndBottomView->m_sWindowName.LoadString(IDS_VIEWTITLE_MERGED);
         m_pwndBottomView->m_sWindowName += _T(" - ") + m_Data.m_mergedFile.GetWindowName();
         m_pwndBottomView->m_sFullFilePath = m_Data.m_mergedFile.GetFilename();
